app/styles/styles.module.css
/* ... */
@media (min-width: 768px) {
  .headerIcons {
    flex-direction: row;
    gap: 2rem;
  }
}

.headerIcon {
  width: 3rem;
  height: 3rem;
  transition: transform 0.3s ease;
}

.headerIcon:hover {
  transform: scale(1.05);
}

@media (min-width: 768px) {
  .headerIcon {
    width: 6rem;
  }
}

.navBar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #222222;
  width: 100%;
  position: relative;
  padding: 1.5rem;
}

.navMenu {
  display: none;
  flex-direction: column;
  list-style: none;
  background-color: #222222;
  position: absolute;
  top: 5rem;
  left: 0;
  width: 100%;
  padding: 1rem;
  gap: 2rem;
}

.navMenu.open {
  display: flex;
}

@media (min-width: 768px) {
  .navMenu {
    display: flex;
    flex-direction: row;
    justify-content: center;
    position: static;
    background-color: transparent;
    gap: 5rem;
  }
}

.menuItem {
  color: whitesmoke;
  font-size: medium;
  text-decoration: none;
  padding: 0 1rem;
  transition: background-color 0.3s ease, color 0.3s ease;
}

.menuItem:hover {
  color: #222222;
  background-color: #f0f0f0;
  border-radius: 5px;
}

@media (min-width: 768px) {
  .menuItem {
    font-size: large;
    margin: 0 1rem;
    margin-right: 5.1rem;
  }
}

.hamburgerMenu {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 30px;
  height: 25px;
  cursor: pointer;
}

.hamburgerBar {
  width: 100%;
  height: 3px;
  background-color: whitesmoke;
  transition: all 0.3s ease;
}

.hamburgerMenu.active .hamburgerBar:nth-child(1) {
  transform: rotate(45deg) translate(5px, 5px);
}

.hamburgerMenu.active .hamburgerBar:nth-child(2) {
  opacity: 0;
}

.hamburgerMenu.active .hamburgerBar:nth-child(3) {
  transform: rotate(-45deg) translate(5px, -5px);
}

@media (min-width: 768px) {
  .hamburgerMenu {
    display: none;
  }
}

.mainGrid {
  display: flex;
  flex-direction: column;
}

@media (min-width: 768px) {
  .mainGrid {
    display: flex;
    flex-direction: column;
  }
}

.heroSection {
  display: flex;
  flex-direction: column-reverse;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding-bottom: 5rem;
}

@media (min-width: 768px) {
  .heroSection {
    flex-direction: row;
    justify-content: space-evenly;
    padding-bottom: 0;
  }
}

.heroTextContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 75%;
}

@media (min-width: 768px) {
  .heroTextContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 60%;
  }
}

.heroTextContainer p {
  text-align: center;
}

@media (min-width: 768px) {
  .heroTextContainer p {
    width: 60%;
  }
}

.heroText {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 3rem;
  padding-bottom: 1rem;
  font-size: x-large;
  text-align: center;
}

@media (min-width: 768px) {
  .heroText {
    font-size: 5rem;
    width: 60%;
    padding-top: 0;
    padding-bottom: 1rem;
  }
}

.heroImageContainer {
  background-image: url("../../public/images/jpg/store1.jpg");
  background-position: center;
  background-size: cover;
  background-clip: border-box;
  width: 100%;
  height: 30rem;
}

@media (min-width: 768px) {
  .heroImageContainer {
    width: 70%;
    height: 55rem;
  }
}

.infoSection {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding: 5rem 0 5rem 0;
  background-color: #e9e4db;
}

@media (min-width: 768px) {
  .infoSection {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 100%;
    padding: 5rem 0;
  }
}

.infoLeft,
.infoCenter,
.infoRight {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-around;
  width: 100%;
}

@media (min-width: 768px) {
  .infoLeft,
  .infoCenter,
  .infoRight {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 2rem;
    width: 20%;
  }
}

.icon {
  width: 5rem;
}

@media (min-width: 768px) {
  .icon {
    width: 10rem;
  }
}

.textInfo {
  font-size: small;
  width: 50%;
}

@media (min-width: 768px) {
  .textInfo {
    font-size: large;
    text-align: center;
    width: 50%;
  }
}

.footerInfo {
  display: flex;
  justify-content: space-around;
  align-items: center;
  background-color: #e9e4db;
  margin: 3rem 0 0 0;
  padding: 1.5rem 0;
  text-align: center;
}

@media (min-width: 768px) {
  .footerInfo {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    padding: 1.5rem 0;
  }
}

.footerSection {
  width: 100%;
  background-color: #e9e4db;
}

@media (min-width: 768px) {
  .footerSection {
    width: 100%;
    margin-top: 10rem;
    padding: 2rem 0 4rem 0;
  }
}
.footerIcons {
  display: flex;
  gap: 1rem;
}

@media (min-width: 768px) {
  .footerIcons {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 5rem;
    padding: 5rem 0;
  }
}

.footerIcon {
  width: 3rem;
  height: 3rem;
  transition: transform 0.3s ease;
}

.footerIcon:hover {
  transform: scale(1.05);
}

@media (min-width: 768px) {
  .footerIcon {
    width: 4rem;
    height: 4rem;
  }
}

.footerCopyrightMessage {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: smaller;
}

@media (min-width: 768px) {
  .footerCopyrightMessage {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: medium;
  }
}

.contactFooterCard {
  text-align: end;
  font-size: smaller;
}

@media (min-width: 768px) {
  .contactFooterCard {
    display: flex;
    flex-direction: column;
    color: black;
  }
}

.footerCardTextTitle {
  font-size: small;
}

@media (min-width: 768px) {
  .footerCardTextTitle {
    font-size: larger;
  }
}

.footerCardText {
  font-size: smaller;
}

@media (min-width: 768px) {
  .footerCardText {
    font-size: medium;
  }
}
/* ... */

